# movie-trailers

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: refresh-site-data.yml
benchmarks/excitement/: .gitignore  01_pull_training_set.py  02_label_with_claude.py  03_export_embedder.py  04_build_features.py  05_train_ridge.py  06_acceptance_test.py  README.md  labels.jsonl
benchmarks/music_id/: README.md  pick_trailers.py  run_benchmark.py
benchmarks/transcripts/: README.md  results.json  results.md  run_benchmark.py  trailers.json
docs/: README.md  index.html
docs/assets/: app.js  style.css
docs/data/: carousel.json  coverage.json  distillation_static.json  engagement_decay.json  excitement_decay.json  excitement_examples.json  mcp_examples.json  meta.json  views_timeseries.json
peach_server/: .env.example  .gitignore  README.md  compose.yaml  refresh-site-data.sh
schemas/: bigquery.sql
src/movie_trailers/: cli.py  config.py  models.py
src/movie_trailers/clients/: bigquery.py  tmdb.py  youtube.py
src/movie_trailers/content/: __init__.py  drafts.py  excitement_model.py  findings.py  polish.py  predictions.py  render.py
src/movie_trailers/content/artifacts/: ridge.npz
src/movie_trailers/digest/: __init__.py  mailer.py  queries.py  render.py
src/movie_trailers/mcp/: README.md  __init__.py  queries.py  server.py
src/movie_trailers/pipeline/: _common.py  comments.py  discover_movies.py  discover_tv.py  excitement.py  stats.py  transcripts.py
src/movie_trailers/site/: builder.py
tests/: test_common.py  test_common_enrichment.py  test_digest_render.py  test_excitement.py  test_site_builder.py  test_stats_helpers.py  test_tmdb_client.py  test_transcripts.py  test_youtube_client.py
