[project]
name = "movie-trailers"
version = "0.1.0"
description = "Daily YouTube trailer metadata collector for upcoming movies and TV shows worldwide"
authors = [
    { name = "rnmourao", email = "roberto@peachpredict.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "google-cloud-bigquery>=3.25",
    "tenacity>=9.0",
    "structlog>=24.4",
    "typer>=0.12",
    "youtube-transcript-api>=1.0",
    "faster-whisper>=1.0",
    "yt-dlp>=2025.1",
]

[project.scripts]
mt = "movie_trailers.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
