[project]
name = "movie-trailers"
version = "0.1.0"
description = "Daily YouTube trailer metadata collector for upcoming movies and TV shows worldwide"
authors = [
    { name = "rnmourao", email = "roberto@peachpredict.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "google-cloud-bigquery>=3.25",
    "tenacity>=9.0",
    "structlog>=24.4",
    "typer>=0.12",
    "youtube-transcript-api>=1.0",
    "faster-whisper>=1.0",
    "yt-dlp>=2025.1",
    "mcp[cli]>=1.2",
    "anthropic>=0.49",
    # Comment-excitement scorer (distilled local model). Present transitively via
    # faster-whisper today; declared explicitly so the torch-free inference path
    # (ONNX session + tokenizer + numpy dot) never breaks if that changes.
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
    "numpy>=1.26",
]

[project.scripts]
mt = "movie_trailers.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.uv]
package = true

# Ship the distilled excitement head (tiny .npz) inside the wheel so the runtime
# can load it from the installed package regardless of editable vs wheel install.
[tool.hatch.build.targets.wheel.force-include]
"src/movie_trailers/content/artifacts/ridge.npz" = "movie_trailers/content/artifacts/ridge.npz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
